TP4:Traiter les erreurs et messages de succès

--- a/src/main/webapp/transfert.xhtml
+++ b/src/main/webapp/transfert.xhtml
@@ -43,6 +43,7 @@
                         <h:commandButton value="Transférer" action="#{transfertBean.transfererArgent}" />
                     </h:panelGrid>
                 </h:form>
+                <h:messages globalOnly="true" style="color: green;" />
             </ui:define>
 
         </ui:composition>
