--- a/src/main/webapp/listeComptes.xhtml
+++ b/src/main/webapp/listeComptes.xhtml
@@ -30,7 +30,7 @@
                 </p:column>
 
             </p:dataTable>
-            <h:messages/>
+            <h:messages globalOnly="true" style="color: green;" />
         </h:form>
     </ui:define>
 
