--- a/src/main/webapp/listeComptes.xhtml
+++ b/src/main/webapp/listeComptes.xhtml
@@ -44,7 +44,14 @@
                         <p:graphicImage name="images/edit.png" width="24" height="24" alt="Renommer" />
                     </h:link>
                 </p:column>
-
+                <p:column>
+                    <f:facet name="header">
+                        <h:outputText escape="false" value="Historique&lt;br/>opérations"/>
+                    </f:facet>
+                    <h:link outcome="operations" value="Détails">
+                        <f:param name="id" value="#{item.id}"/>
+                    </h:link>
+                </p:column>
             </p:dataTable>
         </h:form>
     </ui:define>
