--- a/src/main/webapp/listeComptes.xhtml
+++ b/src/main/webapp/listeComptes.xhtml
@@ -7,7 +7,7 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/templates/template_defaut.xhtml">
     <ui:define name="content">
-        <h:messages id="flashMessages" globalOnly="true" />
+        <h:messages id="messages" globalOnly="true" />
 
         <h:form>
             <p:dataTable id="dataTable" value="#{listeComptes.allComptes}" var="item"
