--- a/src/main/webapp/mouvement.xhtml
+++ b/src/main/webapp/mouvement.xhtml
@@ -49,6 +49,8 @@
                     </h:panelGrid>
                     <h:commandButton action="#{mouvement.enregistrerMouvement()}"
                                      value="Enregistrer le mouvement"/>
+                    <h:messages/>
+
                 </h:form>
             </ui:define>
         </ui:composition>
